grunt preview support

--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "grunt-pandoc": "0.2.3",
     "grunt-plugin-pandoc": "git+https://github.com/eapearson/grunt-plugin-pandoc.git",
     "grunt-shell": "1.1.2",
-    "to-markdown": "2.0.1"
+    "to-markdown": "2.0.1",
+    "grunt-connect": "0.2.0",
+    "grunt-open": "0.2.3"
+
   }
 }
